# meta_cli

./: Cargo.toml
.claude/: agent-guard.toml
.claude/rules/: meta-destructive-commands.md  meta-workspace-discipline.md
.claude/skills/: meta-exec.md  meta-git.md  meta-plugins.md  meta-safety.md  meta-workspace.md  meta-worktree.md
.github/workflows/: auto-format.yml  ci.yml  notify-downstream.yml
src/: agent_guard.rs  agent_score.rs  config.rs  context.rs  dependency_graph.rs  git_utils.rs  init.rs  lib.rs  main.rs  plugins.rs  query.rs  registry.rs  snapshots.rs  subprocess_plugins.rs  worktree.rs
tests/: integration.rs  plugin_git.rs  plugin_rust.rs
tests/examples/: .meta2
