[lib]
name = "meta_cli"
path = "src/lib.rs"

[package]
name = "meta"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0"
libloading = "0.7"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
loop_lib = { path = "../loop_lib" }
meta_plugin_api = { path = "../meta_plugin_api" }
rayon = "1.5"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
ureq = "2.9"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.3"
predicates = "2.1"

[[bin]]
name = "meta"
path = "src/main.rs"
