[lib]
name = "meta_cli"
path = "src/lib.rs"

[package]
name = "meta"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-repo management CLI with AI integration"

[dependencies]
meta_plugin_protocol = { path = "../meta_plugin_protocol" }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
loop_lib = { path = "../loop_lib" }
rayon = "1.5"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
ureq = "2.9"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.3"
predicates = "2.1"

[[bin]]
name = "meta"
path = "src/main.rs"

# cargo-binstall metadata for pre-built binary downloads
# Maps Rust target triples to our asset naming convention
[package.metadata.binstall]
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/meta-darwin-x64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/meta-darwin-arm64.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/meta-linux-x64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/meta-linux-arm64.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/meta-windows-x64.zip"
pkg-fmt = "zip"
